# lcoclient-soar

./: .gitignore  README.md  pyproject.toml
lcoclient-soar/: README.md  __init__.py  download_soar_data.py  lcoclient.py
notebooks/: download_data.ipynb
soarpy/: __init__.py  download.py  lco_client.py  logger.py  utils.py
soarpy/lco_client/: __init__.py  lco_client.py
tests/: download_data.ipynb
utils/: observe.lco.global.json  utils.py
