[project]
name = "soarpy"
version = "0.1.0"
description = "Client and CLI tools for querying and downloading SOAR/Goodman frames from the LCO archive"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy",
    "requests",
    "rich",
]

[project.scripts]
soar-download = "soarpy.download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soarpy"]

[tool.hatch.build.targets.wheel.force-include]
"soarpy/config/sensfunc.par" = "soarpy/config/sensfunc.par"
"soarpy/data/observe.lco.global.json" = "soarpy/data/observe.lco.global.json"
